--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "formik": "^2.4.3",
     "framer-motion": "^10.16.4",
     "js-cookie": "^3.0.5",
+    "mdb-react-ui-kit": "^6.3.0",
     "otp-input-react": "^0.3.0",
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.4",
@@ -33,13 +34,17 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
     "react-icons": "^4.10.1",
+    "react-material-ui-carousel": "^3.4.2",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
+    "react-spring": "^9.7.2",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
+    "spring": "^0.0.0",
     "styled-components": "^5.3.11",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4",
